--- a/index.html
+++ b/index.html
@@ -49,15 +49,6 @@
                                     <a href="#features">Features</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#sales">Token</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="#roadmap">RoadMap</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="#document">Document</a>
-                                </li>
-                                <li class="menu-item">
                                     <a href="#contact">Contact</a>
                                 </li>
                             </ul>
@@ -81,13 +72,11 @@
             <div class="col-xl-6 col-md-12">
                 <div class="banner-top__content">
                     <div class="sale-top">
-                        <a href="#">75% OFF</a>
-                        <p>For the Black Friday weekend</p>
+                        <a href="#">INTRODUCTION</a>
+                        <p></p>
                     </div>
                     <h2 class="title">Powering Data for the new equity blockchain.</h2>
-                    <p>Our unique SMART CONTRACT is made with the intention of being the safest in the entire Crypto Space. It is made with every measure to ensure the power lies in the investors hands, not the team. With max limits on the taxes, It will never be able to be put above 15%. There are no blacklist functions, neither is it possible to disable trading. This is to ensure a safe environment for every buyer.</p>
-
-
+                    <p>Arbrifloki is a token created by a team pf talented individuals who are focused on building an entire utility-based ecosystem on the Arb blockchain. Through our phases of development, we aim to operate with transparency, integrity for out community</p>
                 </div>
             </div>
             <div class="col-xl-6 col-md-12">
@@ -104,11 +93,7 @@
 <section id="about" class="about style-1">
     <div class="container">
         <div class="row">
-            <div class="col-xl-7 col-md-12">
-                <div class="about__image">
-                    <img src="assets/images/layout/Graphic.png" alt="ICOLand">
-                </div>
-            </div>
+
             <div class="col-xl-5 col-md-12">
                 <div class="about__content">
                     <div class="block-text">
@@ -142,6 +127,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="col-xl-7 col-md-12">
+                <div class="about__image">
+                    <img src="assets/images/layout/Graphic.png" alt="ICOLand">
                 </div>
             </div>
         </div>
