--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
             <div class="col-xl-6 col-md-12">
                 <div class="banner-top__content">
                     <div class="sale-top">
-                        <a href="#">INTRODUCTION</a>
+                        <a href="#">Welcome to ARBRIFLOKI</a>
                         <p></p>
                     </div>
                     <h2 class="title">Powering Data for the new equity blockchain.</h2>
-                    <p>Arbrifloki is a token created by a team pf talented individuals who are focused on building an entire utility-based ecosystem on the Arb blockchain. Through our phases of development, we aim to operate with transparency, integrity for out community</p>
+                    <p>ARBRIFLOKI is an ERC-20 meme token on the Arbitrum Network! $ARBRIFLOKI is out to not only take over the internet with memes again, but the crypto world as well.
+
+$ARBRIFLOKI is here to show the world the true power of what can happen when you combine memes, a good community, and a crypto bull market together.
+
+Moon is programmed & $ARBRIFLOKI is happy about it.</p>
                 </div>
             </div>
             <div class="col-xl-6 col-md-12">
@@ -225,17 +229,14 @@
                         to get in touch, please fill out the form below. </p>
                 </div>
                 <ul class="contact__list">
-                    <li>
-                        <div class="icon"><span class="icon-message"></span></div>
-                        <h5 class="fs-20">Info@yourcompany.com</h5>
-                    </li>
+
                     <li>
                         <div class="icon"><span class="icon-Calling"></span></div>
-                        <h5 class="fs-20">+84 0977425031</h5>
+                        <h5 class="fs-20"><a href="">+84 0977425031</a></h5>
                     </li>
                     <li>
                         <div class="icon"><span class="icon-telegram"></span></div>
-                        <h5 class="fs-20">Join us on Telegram</h5>
+                        <h5 class="fs-20"><a href="">Join us on Telegram</a></h5>
                     </li>
                 </ul>
             </div>
@@ -256,11 +257,7 @@
                             knowledge to become successful investors globally</p>
                         <ul class="list-social">
                             <li><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li><a href="#"><span class="icon-facebook"></span></a></li>
                             <li><a href="#"><span class="icon-place"></span></a></li>
-                            <li><a href="#"><span class="icon-youtobe"></span></a></li>
-                            <li><a href="#"><span class="icon-tiktok"></span></a></li>
-                            <li><a href="#"><span class="icon-reddit"></span></a></li>
                         </ul>
                     </div>
                 </div>
