--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ Moon is programmed & $ARBRIFLOKI is happy about it.</p>
                 <div class="block-text">
                     <h3>Contact Us</h3>
                     <p class="mt-12">We are always open, and we welcome and questions you have for our team. If you wish
-                        to get in touch, please fill out the form below. </p>
+                        to get in touch.</p>
                 </div>
                 <ul class="contact__list">
 
