--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                     <div class="header__right">
                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
-                                <li class="menu-item">
-                                    <a href="#about">About</a>
-                                </li>
+
                                 <li class="menu-item">
                                     <a href="#features">Features</a>
                                 </li>
@@ -76,11 +74,13 @@
                         <p></p>
                     </div>
                     <h2 class="title">Powering Data for the new equity blockchain.</h2>
-                    <p>ARBRIFLOKI is an ERC-20 meme token on the Arbitrum Network! $ARBRIFLOKI is out to not only take over the internet with memes again, but the crypto world as well.
+                    <p>ARBRIFLOKI is an ERC-20 meme token on the Arbitrum Network! $ARBRIFLOKI is out to not only take
+                        over the internet with memes again, but the crypto world as well.
 
-$ARBRIFLOKI is here to show the world the true power of what can happen when you combine memes, a good community, and a crypto bull market together.
+                        $ARBRIFLOKI is here to show the world the true power of what can happen when you combine memes,
+                        a good community, and a crypto bull market together.
 
-Moon is programmed & $ARBRIFLOKI is happy about it.</p>
+                        Moon is programmed & $ARBRIFLOKI is happy about it.</p>
                 </div>
             </div>
             <div class="col-xl-6 col-md-12">
@@ -93,55 +93,6 @@ Moon is programmed & $ARBRIFLOKI is happy about it.</p>
 </section>
 <!-- end Banner Top -->
 
-<!-- Section Features -->
-<section id="about" class="about style-1">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-xl-5 col-md-12">
-                <div class="about__content">
-                    <div class="block-text">
-                        <h3 class="title">What is ICO?</h3>
-                        <p>The world first platform to reward investors and traders build on ICO</p>
-                    </div>
-
-                    <div class="list-icon-box" data-aos="fade-up" data-aos-duration="800">
-                        <div class="icon-box">
-                            <div class="icon"><span class="icon-users"></span></div>
-                            <div class="content">
-                                <h5>Decentralized Platform</h5>
-                                <p class="fs-14">The platform helps investors to make easy to purchase and sell their
-                                    tokens</p>
-                            </div>
-                        </div>
-                        <div class="icon-box">
-                            <div class="icon"><span class="icon-internet"></span></div>
-                            <div class="content">
-                                <h5>Crowd Wisdom</h5>
-                                <p class="fs-14">The process of taking into account the collective opinion of a
-                                    group</p>
-                            </div>
-                        </div>
-                        <div class="icon-box">
-                            <div class="icon"><span class="icon-users"></span></div>
-                            <div class="content">
-                                <h5>Decentralized Platform</h5>
-                                <p class="fs-14">The platform helps investors to make easy to purchase and sell their
-                                    tokens</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-7 col-md-12">
-                <div class="about__image">
-                    <img src="assets/images/layout/Graphic.png" alt="ICOLand">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Section Features -->
 
 <!-- Section Choose -->
 <section class="features" id="features">
@@ -218,6 +169,51 @@ Moon is programmed & $ARBRIFLOKI is happy about it.</p>
 </section>
 <!-- End Section Choose -->
 
+<!-- Section Token Details -->
+<section class="token-details style-1" id="token">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block-text center">
+                    <h3>ICO Token Details</h3>
+                    <p class="mt-12">Although our launch tax is will be higher at the very start to accelerate our initial burn and to reduce early paperhands, ARBRIFLOKI token is designed to be a  low tax, low gas fee  moonshot with half of all taxes collected BURNED on every buy and every sell!
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-25">
+            <div class="col-md-6">
+                <div class="infomation" data-aos="fade-up" data-aos-duration="800">
+                    <ul class="info-list">
+                        <li class="active">
+                            <h5>Liquidity</h5>
+                            <p class="fs-17">Starting Liquidity is 3 $ARBRIFLOKI</p>
+                        </li>
+                        <li>
+                            <h5>UNICRYPT VESTING</h5>
+                            <p class="fs-17">Any tokens sold in the Private Sale will be vested for a total of 5 days with 25% becoming available each day, starting 24 hours after launch.</p>
+                        </li>
+                        <li>
+                            <h5>STAKING</h5>
+                            <p class="fs-17">USDC Staking Pools  will be deployed on Unicrypt to reward holders with passive income for holding and staking ARBRIFLOKI.</p>
+                        </li>
+                        <li>
+                            <h5>MAXES</h5>
+                            <p class="fs-17">At launch, max wallet and max transaction will be 1% with 2% maxes going into affect 1 hour later. After 3 days, pur max wallet and max transaction size will be lifted completely.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="token-details__image">
+                    <img src="assets/images/layout/Graphic.png" alt="ICOLand">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Section Token Details -->
+
 <!-- Section Contact -->
 <section class="contact" id="contact">
     <div class="container">
@@ -256,7 +252,7 @@ Moon is programmed & $ARBRIFLOKI is happy about it.</p>
                         <p>Don’t hesitate to subscribe to latest news about ICo markets as well as crucial financial
                             knowledge to become successful investors globally</p>
                         <ul class="list-social">
-                            <li><a href="#"><span class="icon-twitter"></span></a></li>
+                            <li><a href="https://twitter.com/Arbrifloki?s=09"><span class="icon-twitter"></span></a></li>
                             <li><a href="#"><span class="icon-place"></span></a></li>
                         </ul>
                     </div>
@@ -271,7 +267,9 @@ Moon is programmed & $ARBRIFLOKI is happy about it.</p>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>© <script>document.write(new Date().getFullYear())</script>. All rights reserved by <a href="">Arbrifloki</a>
+                    <p>©
+                        <script>document.write(new Date().getFullYear())</script>
+                        . All rights reserved by <a href="">Arbrifloki</a>
                     </p>
                 </div>
             </div>
