--- a/index.html
+++ b/index.html
@@ -129,18 +129,7 @@
                         <div class="token-sale-box">
                             <ul>
                                 <li>
-                                    <span>Liquidity:</span>
-                                    <p>Starting Liquidity is 3 $ARBRIFLOKI</p>
-                                </li>
-                                <li>
-                                    <span>Unicrypt Vesting:</span>
-                                    <p>ny tokens sold in the Private Sale will be vested for a total of 5 days
-                                        with 25% becoming available each day, starting 24 hours after launch.</p>
-                                </li>
-                                <li>
-                                    <span>Staking:</span>
-                                    <p>USDC Staking Pools will be deployed on Unicrypt to reward holders with
-                                        passive income for holding and staking ARBRIFLOKI.</p>
+                                    <span>Liquidity</span>
                                 </li>
                                 <li>
                                     <span>Maxes:</span>
@@ -167,7 +156,7 @@
                     <div class="roadmap-item done">
                         <div class="title">
                             <span>Phase 1</span>
-                            <p> Eth Launch <br>
+                            <p>Arbrifloki  Launch <br>
                                 Audit <br>
                                 Kyc <br>
                                 Website V2 launch </p>
@@ -179,7 +168,6 @@
                             <span>Phase 2</span>
                             <p>Twitter & Social Media Targeted Marketing <br>
                                 Partnership With Influencers <br>
-                                Baby Floki DEX <br>
                                 Charity Donations </p>
                         </div>
                     </div>
