--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="roadmap-item active">
                         <div class="title">
                             <span>Phase 4</span>
-                            <p>>Cex Listings <br>
+                            <p>Cex Listings <br>
                                 Worldwide Geo Marketing <br>
                                 Exclusive Real World Crypto Events</p>
                         </div>
@@ -208,8 +208,8 @@
                 <div class="col-sm-12">
                     <div class="socials">
                         <ul>
-                            <li><a class="twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a class="telegram" href="#"><i class="fa fa-paper-plane"></i></a></li>
+                            <li><a class="twitter" href="https://twitter.com/Arbrifloki?s=09"><i class="fab fa-twitter"></i></a></li>
+                            <li><a class="telegram" href="https://t.me/arbriflokii"><i class="fa fa-paper-plane"></i></a></li>
                         </ul>
                     </div>
                     <div class="copyrights">
